applied styling for buttons and fixed alignment

--- a/pages/profile/Profile.css
+++ b/pages/profile/Profile.css
@@ -1,6 +1,5 @@
 @import "index.css"; 
 * {
-
     border-radius: 2px;
     font-family: 'Trebuchet MS', sans-serif;
     color: #FFFFFF;
@@ -14,13 +13,10 @@ body {
 
 #posts_table{
     background-color: var(--main-post-inner);
-    align-items: center;
-    align-self: center;
     padding: 10px;
     border:#FFFFFF ;
     border: "4";
-    margin-left: 400px;
-   
+
 }
 
 #post_images{
@@ -36,12 +32,17 @@ body {
     align-self: center;
 }
 
+.header_section{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
 .profile_details{
 margin-top: 30px;
 margin-left: 40px;
 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 color:var(--main-text-color);
-
 }
 
 .username{
@@ -65,10 +66,61 @@ font-weight: bold;
     border-radius: 205px;
     border-style: solid;
     border-width: 4px;
-    border-color: #FFFFFF;
-  
-  
+    border-color: #FFFFFF; 
 }
+
+.editprofile{
+    height: 60px;
+    width: 200px;
+    text-align: center;
+    text-decoration: none;
+   background-color: var(--main-post-inner);
+    transition: 0.25s linear;
+    padding: 20px 40px;
+ 
+    border-radius: 15px;
+    border: #FFFFFF;
+    font-weight: bold;
+
+    margin-right: 300px;
+    margin-top: 250px;
+
+
+}
+.friendlist{
+    height: 60px;
+    width: 200px;
+    text-align: center;
+    align-items: center;
+    text-decoration: none;
+    background-color: var(--main-post-inner);
+    transition: 0.25s linear;
+    padding: 20px 40px;
+    border-radius: 15px;
+    border: #FFFFFF;
+    font-weight: bold;
+    margin-left: 300px;
+    margin-top: 250px;
+    
+}
+.friendlist:hover{
+    background: var(--main-button-hover);
+}
+
+.editprofile:hover{
+    background: var(--main-button-hover);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
